fix overflow-x su container e container-fluid

--- a/isc-tattoo-studio/src/app/components/artisti/sketchomaule/sketchomaule.css
+++ b/isc-tattoo-studio/src/app/components/artisti/sketchomaule/sketchomaule.css
@@ -37,3 +37,7 @@
 .sketch-card:hover img {
   transform: scale(1.05);
 }
+
+.container, .container-fluid {
+  overflow-x: hidden;
+}
