--- a/isc-tattoo-studio/src/app/components/chisiamo/chisiamo.css
+++ b/isc-tattoo-studio/src/app/components/chisiamo/chisiamo.css
@@ -13,7 +13,18 @@
 }
 
 .hero-content {
+    max-width: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
     position: relative;
     max-width: 800px;
     z-index: 2;
+}
+
+body {
+    overflow-x: hidden;
+}
+
+.container, .container-fluid {
+  overflow-x: hidden;
 }
